scripts/App.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

:root {
    --njit-blue: #2D4059;
    --njit-gold: goldenrod;
    --njit-red: #802828;
    --njit-light-red: #ac4e4e;
    --njit-dark-red: #421f1f;
    --njit-meteorite: rgb(40, 40, 50);
    --njit-black: rgb(15, 15, 18);
    --njit-white: rgb(200, 200, 210);
}

.google-login-page {
    background-image: url("https://i.imgur.com/gWZMoWN.jpg");
    width: 100vw;
    display: grid;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.login-page-upper {
    height: 100vh;
    display: grid;
    justify-content: center;
    align-items: center;
}

.login-container {
    display: grid;
    background-color: var(--njit-blue);
    border-radius: 20px;
    border: 1px solid white;
    width: 300px;
    padding: 40px;
    height: 400px;
    justify-content: center;
    align-items: center;
}

.highlander {
    width: 250px;
    border-radius: 50%;
    background-color: white;
    justify-content: center;
}

.login-button {
    background-color: white;
    width: 250px;
    height: 50px;
    border-radius: 10px;
    margin: auto;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
    transition-duration: .25s;
}

.login-button:hover{
    background-color: var(--njit-red);
    transition-duration: .25s;
    width: 250px;
    height: 50px;
    border-radius: 10px;
    margin: auto;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
}

.njit-header {
    position: relative;
    display: flex;
    background-color: var(--njit-red);
    color: var(--njit-white);
    align-items: center;
    justify-content: center;
    height: 60px;
}

.njit-banner {
    border-top: 1px solid var(--njit-white);
    border-bottom: 1px solid var(--njit-white);
    position: absolute;
    left: 50px;
    font-size: 2rem;
}

.content-container {
    background-color: var(--njit-black);
    overflow: hidden;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.event-content-container {
    position: relative;
    border-radius: 10px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    width: 960px;
    margin: auto;
    height: 80vh;
}

.event-history-container {
    background-color: var(--njit-dark-red);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    overflow-y: scroll;
    border: 1px solid var(--njit-black);
    padding: 20px;
    border-radius: 10px;
    height: 90%;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.event-session-container {
    background-color: var(--njit-red);
    color: var(--njit-white);
    text-align: center;
    border: 1px solid var(--njit-light-red);
    margin: 12px;
    border-radius: 10px;
    padding: 20px;
    height: fit-content;
    row-gap: 0;
}

.event-session-container:hover {
    background-color: var(--njit-light-red);
}

.expanded-event {
    display: inline-block;
    min-width: 50%;
    border-left: 1px solid var(--njit-black);
    border-right: 1px solid var(--njit-black);
    border-radius: 10px;
    padding: 10px;
    font-size: .8rem;
}

.event-session {
    padding: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;

}

.event-session:hover {
    padding: 10px;
    cursor: pointer
}

.event-form {
    display: grid;
    grid-template-columns: 150px  150px 150px 100px auto auto;
    text-align: center;
    background-color: var(--njit-dark-red);
    height: 12%;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    padding: 10px;
    grid-gap: 10px;
}

.type-select-container, .location-input-container,
.time-input-container, .text-area-container, .submit-button, .title-container  {
    background: var(--njit-red);
    text-align: center;
    color: var(--njit-white);
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    border: 1px solid var(--njit-light-red);
    transition-duration: .25s;
}

.submit-button:hover {
    transition-duration: .25s;
    background-color:var(--njit-light-red);
}

.profile-picture {
    width: 200px;
    border-radius: 50%;
    border: 1px solid var(--njit-black);
}

.profile-container {
    position: absolute;
    left: 10%;
    display: inline-block;
    z-index: 1;
}

.profile-content-container {
    background-color: var(--njit-red);
    position: absolute;
    z-index: 1;
    border-radius: 10px;
    padding: 20px;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.profile-button {
    width: 150px;
    height: 50px;
    background-color: var(--njit-red);
    border-radius: 10px;
    border: 1px solid var(--njit-light-red);
    transition-duration: .25s;
    color: var(--njit-white);
}

.profile-button:hover {
    background-color: var(--njit-light-red);
    transition-duration: .25s;
}

.close-btn {
    position: absolute;
    left: 11;
}

.landing-container {
    background-color: var(--njit-black);
    width: 100vw;
    display: grid;
    align-items: center;
    justify-content: center;
}

.page-container {
    padding: 50px;
    width: 960px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.app-description {
    text-align: left;
    padding: 40px;
    font-size: 1.25rem;
    border-right: 1px solid var(--njit-white);
    color: var(--njit-white);
}

.team {
    padding: 40px;
    display: grid;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: var(--njit-white);
}

.current-user-display {
    display: flex;
    width: 180px;
    justify-content: space-between;
    align-items: center;
    padding: 5px;
    background-color: black;
    color: white;
    transition-duration: .25s;
}

.current-user-display:hover {
    background-color: gray;
    transition-duration: .25s;
}

#online {
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: lime;
    box-shadow: 0 0 2px lime;
}

#offline {
    background-color: red;
    box-shadow: 0 0 3px orangered;
    width: 8px;
    height: 8px;
    border-radius: 50%;
}

